# aristarchus

./: README.md  pyproject.toml
aristarchus/: constants.py  main.py  metrics.py  text_analysis.py  types.py  word_processing.py
